core/compiler/tests/programs/ok/record.loz
:: R = { t :: Int }

g :: R -> Int
g {R|t} = t

f x = 18 * g x

main = f {R|t = 9}