core/compiler/tests/programs/type_err/undefined_record_in_type.loz
f :: R -> Int
f {R|x} = x

main = {R|x = 18}